part2/2_06/manifests/main-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-dep
  namespace: main-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-app
  template:
    metadata:
      labels:
        app: main-app
    spec:
      containers:
        - name: main-container
          image: robsondepaula/main-app:2_06
        - name: pingpong-container
          image: robsondepaula/pingpong:2_06
